Changed role model, common lib, game logic lib, role card to accommodate facilitator, updated fonts, added button mixin, updated player icons, added intro text to CMS, WIP new timer.

--- a/public/styles/_core/fonts.scss
+++ b/public/styles/_core/fonts.scss
@@ -25,18 +25,14 @@
 	}
 }
 
-@include font-face(AvenirNext, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/AvenirNext-Regular', null, null, woff2 woff eot ttf);
-@include font-face(AvenirNext-Bold, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/AvenirNext-Bold', null, null, woff2 woff eot ttf);
-@include font-face(AvenirNext-DemiBold, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/AvenirNext-DemiBold', null, null, woff2 woff eot ttf);
-@include font-face(AvenirNext-UltraLight, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/AvenirNextCondensed-UltraLight', null, null, woff2 woff eot ttf);
-@include font-face(AvenirNext-Medium, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/AvenirNext-Medium', null, null, woff2 woff eot ttf);
-@include font-face(AvenirNext-Heavy, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/AvenirNext-Heavy', null, null, woff2 woff eot ttf);
 
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 @include font-face(Aileron, 'https://res.cloudinary.com/engagement-lab-home/raw/upload/v1487785800/at-stake/fonts/Aileron-Regular', null, null, otf);
 
-
-$body-type: "AvenirNext-Medium", sans-serif;
-$header-type: "AvenirNext-Bold", sans-serif;
+$body-type: 'Source Code Pro', monospace;
+$semibold-type: 'SourceCodePro-SemiBold', monospace;
+$header-type: 'Roboto-Bold', sans-serif;
 $sub-header-type: "AvenirNext-DemiBold", sans-serif;
 $at-sign-type: "AvenirNext-UltraLight", sans-serif;
 
