--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -201,15 +201,12 @@
 
                 </div>
 
-                <footer id="bottom-bar" style="display:none">
+                <footer id="bottom-bar" style="display: none">
                 
                     <div class="col-sm-6 col-xs-6">
-                        <button id="btn-role-card">Role Card</button>
+                        <button id="btn-role-card"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1492806723/at-stake/icons/role"></button>
+                        <button id="btn-facilitator"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540566894/at-stake/icons/facilitator"></button>
                         <button id="btn-menu">Menu</button>
-                    </div>
-                    <div id="currency" class="col-sm-6 col-xs-6">
-                        <div id="pot-coins"><p>coin pot</p>  <span></span></div>
-                        <div id="player-coins"><p>your coins</p>  <span></span></div>
                     </div>
                     
                 </footer>
