--- a/templates/partials/decider/decks.hbs
+++ b/templates/partials/decider/decks.hbs
@@ -5,11 +5,11 @@
     <div class="deck" data-id="{{_id}}">
 
       <div class="deck-header">
-        <h2 class="medium-font white">{{name}}</h2>
+        <h2><span>{{name}}</span> <img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540488090/at-stake/icons/magnify.svg" alt="Magnifying glass icon"/></h2>
+      </div>
 
-        <div class="description white subtitle">
-          {{description}}
-        </div>
+      <div class="description subtitle">
+        {{description}}
       </div>
 
     </div>
@@ -39,7 +39,7 @@
     </div>
 
 
-    <button class="btn_submit button_text game_login">select</button>
+    <button class="btn_submit button_text game_login"><img src="https://res.cloudinary.com/engagement-lab-home/image/upload/v1540488090/at-stake/icons/check-btn.svg" alt="Select this deck"></button>
 
   </div>
 
