--- a/public/styles/_core/lobby.scss
+++ b/public/styles/_core/lobby.scss
@@ -171,10 +171,6 @@
 			margin-top: -16px;
 			height: 80%;
 
-			#btn_new_game {
-				@include gradient-vertical($orange-light, $orange-dark, 90%, 10%);
-			}
-
 			#btn_join_game {
 				@include gradient-vertical($blue-light, $blue-dark, 90%, 10%);
 
@@ -185,7 +181,7 @@
 		.btn {
 			width: 80%;
 			white-space: normal;
-			color: white;
+			// color: white;
 			border: 0px;
 			border-radius: 0px;
 			height: 48px;
@@ -242,11 +238,11 @@
 		}
 
 		p {
-			color: white;
+			color: $cerulean-blue;
 			width: 226px;
 			margin: 0px auto;
-			font-size: 16px;
-			font-family: AvenirNext-Medium;
+			font-size: 18px;
+			font-family: $header-type;
 		}
 
 	}
@@ -269,41 +265,37 @@
 		}
 
 		#player-name {
-			height: 48px;
+			height: 73px;
 			width: 100%;
 			margin: 0 auto;
 			font-size: 14px;
-			// line-height: 48px;
 			border-radius: 0px;
-			background-color: $color-white;
-			// box-shadow: inset 0 0 2px 1px rgba(0, 0, 0, 0.2);
-			border: 0px;
-			border-top: 3px solid lighten($color-grey, 30%);
 			margin: 0px;
 			margin-bottom: 5px;
 
+			background: white;
+			border: 2px solid $cerulean-blue;
+			border-bottom-width: 4px;
+
 			&::-webkit-input-placeholder {
-				font-size: 12px;
+				font-size: 14px;
 				height: 48px;
 				text-align: center;
 			}
-
 			&::-moz-placeholder {
-				font-size: 12px;
+				font-size: 14px;
 				height: 48px;
 				text-align: center;
 
 			}
-
 			&:-ms-input-placeholder {
-				font-size: 12px;
+				font-size: 14px;
 				height: 48px;
 				text-align: center;
 
 			}
-
 			&:-moz-placeholder {
-				font-size: 12px;
+				font-size: 14px;
 				height: 48px;
 				text-align: center;
 
@@ -325,34 +317,20 @@
 			font-size: 12px;
 			line-height: 16px;
 			width: 90%;
-			color: $color-white;
+			color: black;
 			margin: 0px auto;
-			text-align: center;
-		}
-
-		#btn_submit_name {
-			@include gradient-vertical($pink-light, $pink-dark, 90%, 10%);
-			color: white;
-			border: 0px;
-			border-radius: 0px;
-			height: 48px;
-			width: 160px;
-			padding: 0px;
-			font-size: 24px;
-			margin-bottom: 10%;
-			margin-top: 5%;
-			font-family: AvenirNext-Bold;
-			font-size: 24px;
-			font-weight: bold;
-			font-style: normal;
-			font-stretch: normal;
-			line-height: 1;
-			letter-spacing: 0px;
 			text-align: center;
 		}
 	}
 
+	#btn_submit_name, #btn_new_game {
+		@include button($cerulean-blue, $yellow);
+	}
+
 	.lobby {
+
+		&#join {
+		}
 
 		.game_login {
 			width: 80%;
@@ -364,14 +342,7 @@
 			padding: 0px;
 			margin: 0 auto;
 			margin-bottom: 10px;
-			background: -moz-linear-gradient(top, $orange-light 90%, $orange-dark 10%);
-			/* FF3.6-15 */
-			background: -webkit-linear-gradient(top, $orange-light 90%, $orange-dark 10%);
-			/* Chrome10-25,Safari5.1-6 */
-			background: linear-gradient(to bottom, $orange-light 90%, $orange-dark 10%);
-			/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 			position: relative;
-			font-family: AvenirNext-Bold;
 			font-size: 20px;
 			font-weight: bold;
 			font-style: normal;
@@ -456,13 +427,8 @@
 			bottom: 0px;
 		}
 
-		.form {
-			color: white;
-		}
-
 		.form-prompt {
 			font-size: 12px;
-			color: #fafafa;
 			margin-bottom: 8px;
 		}
 
@@ -503,15 +469,21 @@
 					display: inline-block;
 					width: 98%;
 					cursor: pointer;
+					box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.25);
 	
 					.deck-header {
-						background-color: $color-orange;
 						padding: 8px;
 						color: white;
-						box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
+						background-color: $strawberry;
+						text-align: left;
+						// box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
 						font-weight: 700;
-						font-size: 16px;
-						font-family: AvenirNext-Bold;
+						font-size: 20px;
+						font-family: $header-type;
+
+						img {
+							float: right;
+						}
 	
 						h2 {
 							margin: 0px;
@@ -655,6 +627,23 @@
 
 		}
 
+	}
+
+	#intro {
+		button {
+			position: absolute;
+			right: 9%;
+			bottom: 11%;		
+		}
+		.text {
+			border: solid 2px black;
+			font-size: 13px;
+			font-weight: 600;
+			line-height: 1.38;
+			letter-spacing: 0px;
+			text-align: center;
+			color: black;
+		}
 	}
 
 }
